fix: When a line of code block is too long, the page length exceeds the minimum width of 1440

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -125,8 +125,8 @@ html > body {
 }
 
 .preview-content-wrap {
-  flex: 1;
   width: calc(100vw - var(--preview-sider-width) - 15px);
+  overflow-x: auto;
 
   .preview-content {
     display: flex;
